# cmu-mocap-ingestor

./: .gitignore  R2.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: blender_single.py  build_manifest.py  convert_bvh.py  import_postgres.py  parse_bvh_metadata.py  parse_motion_index.py
src/cmu_mocap_ingestor/: __init__.py  bvh.py  manifest.py  motion_index.py  postgres.py
src/core/: __init__.py  files.py  json_io.py
src/features/: __init__.py
src/features/blender_conversion/: __init__.py  blender_batch.py  blender_multi_batch.py  blender_single.py  convert_bvh.py
src/features/bvh_metadata/: __init__.py  __main__.py
src/features/motion_index/: __init__.py  __main__.py
src/features/motion_manifest/: __init__.py  __main__.py
src/features/postgres/: __init__.py  __main__.py
src/features/skeleton_preview/: __init__.py  glb_skeleton_viewer.html
tests/: test_blender_multi_batch.py  test_manifest.py  test_postgres.py
tools/: glb_skeleton_viewer.css  glb_skeleton_viewer.html
