[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cmu-mocap-ingestor"
version = "0.1.0"
description = "Ingestion pipeline for the CGSpeed CMU BVH motion dataset"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
